fix(compiler): remove non-8 compliant calls